응집도를 높이고 결합도를 낮추도록 로직을 수정했습니다.