@@ -3,14 +3,14 @@ package com.example.demo;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
-import java.util.stream.Collectors;
 
-public class BankStatementCSVParser {
+public class BankStatementCSVParser implements BankStatementParser {
 
     private static final DateTimeFormatter DATE_PATTERN = DateTimeFormatter.ofPattern(
             "dd-MM-yyyy");
 
-    public BankTransaction parserFromCSV(final String line) {
+    @Override
+    public BankTransaction parserFrom(final String line) {
         final String[] columns = line.split(",");
 
         final LocalDate date = LocalDate.parse(columns[0], DATE_PATTERN);
@@ -20,9 +20,10 @@ public class BankStatementCSVParser {
         return new BankTransaction(date, amount, description);
     }
 
-    public List<BankTransaction> parserLinesFromCSV(final List<String> lines) {
+    @Override
+    public List<BankTransaction> parserLinesFrom(final List<String> lines) {
         return lines.stream()
-                .map(this::parserFromCSV)
-                .collect(Collectors.toList());
+                .map(this::parserFrom)
+                .toList();
     }
 }
